# simple-database

simple-database/: CMakeLists.txt  Dockerfile  README.md
simple-database/lib/FatFS/: diskio.cpp  fakedisk.cpp  fakedisk.h  ff.cpp  ffconf.h
simple-database/lib/messages/: .gitignore  CMakeLists.txt  README.md
simple-database/lib/messages/generator/: README.md  json_parser.py  message_generator.py  message_utils.py  property_generator.py  statement_builder.py
simple-database/lib/messages/generator/templates/: license-header.txt  message.cpp  message.hpp  serializeable.cpp  serializeable.hpp
simple-database/lib/messages/generator/templates/definitions/: MessageDefinitions.hpp  MessageEnums.hpp  TableMap.hpp
simple-database/lib/messages/generator/templates/properties/: enum.txt  enum_header.txt  get.txt  get_header.txt  primitive_get_and_set.txt  primitive_get_and_set_header.txt  set_header.txt
simple-database/lib/messages/src/common/: MessageUtils.cpp  MessageUtils.hpp
simple-database/lib/messages/src/common/BaseMessage/: BaseMessage.cpp  BaseMessage.hpp  BaseMessageDefinitions.hpp
simple-database/lib/messages/src/common/Serializeable/: BaseProperty.cpp  BaseProperty.hpp  Property.hpp  Serializeable.cpp  Serializeable.hpp
simple-database/lib/messages/src/common/Serializeable/PropertyData/: BaseEnumWrapper.hpp  ConstLengthBuffer.hpp  EnumSet.hpp  FixedLengthString.hpp  LengthEncodedSet.hpp  LengthPrefixedBuffer.hpp  LengthPrefixedExternalBuffer.hpp  LengthPrefixedSet.hpp  Primitive.hpp  PropertyData.hpp  StringSet.hpp  UInt256Buffer.cpp  UInt256Buffer.hpp
simple-database/lib/messages/src/common/crc/: crc32.cpp  crc32.h
simple-database/lib/messages/src/receiver/: Receiver.cpp  Receiver.hpp
simple-database/lib/messages/test/: CMakeLists.txt
simple-database/lib/messages/test-schemas/: Constants.json  Enums.json  Events.json  Messages.json  Serializeable.json  Tables.json
simple-database/lib/messages/test/suites/: BaseMessageTest.cpp  PropertyTest.cpp  ReceiverTest.cpp  SerializeableTest.cpp  TableTest.cpp  TestRemainderTest.cpp
simple-database/src/: DbCache.cpp  DbCache.hpp  DbDriver.cpp  DbDriver.hpp  DbError.hpp  crc.cpp  crc.h  logging.hpp
simple-database/src/FileWrapper/: DirectoryWrapper.cpp  DirectoryWrapper.hpp  FileWrapper.cpp  FileWrapper.hpp
simple-database/src/Tables/: AllPassTest.hpp  ChildTable.hpp  CustomChildTable.hpp  CustomTest.hpp  MaskTest.hpp  NeedleTest.hpp  Query.cpp  Query.hpp  RecordTest.hpp  ResultSet.hpp  Table.hpp
simple-database/src/Validation/: Validator.hpp
simple-database/test/: CMakeLists.txt
simple-database/test-schemas/: Constants.json  Enums.json  Serializeable.json  Tables.json
simple-database/test/src/: TableSubclassTest.cpp  TestUserHelper.cpp  TestUserHelper.hpp  fs.cpp  fs.hpp
simple-database/test/src/Validation/: TestUserValidator.cpp  TestUserValidator.hpp
simple-database/test/src/suites/: DbCacheTest.cpp  DbDriverTest.cpp  TableTest.cpp  UserValidatorTest.cpp
